Added Connection string to plesk DB

--- a/NekretnineAPI/NekretnineAPI/appsettings.json
+++ b/NekretnineAPI/NekretnineAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+"ConnectionStrings": {
+  "DefaultConnection": "Server=app.fit.ba,1431;Database=Nekretnine;Trusted_Connection=false;User ID=Nekretnine;Password=mmGh$909;MultipleActiveResultSets=true"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
