--- a/NekretnineAPI/NekretnineAPI/Properties/launchSettings.json
+++ b/NekretnineAPI/NekretnineAPI/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26214",
-      "sslPort": 44338
+      "applicationUrl": "http://localhost:11181",
+      "sslPort": 44389
     }
   },
   "profiles": {
     "NekretnineAPI": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7117;http://localhost:5117",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7117;http://localhost:5117",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
